--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.1
+  firebase_auth: ^0.18.0
+  firebase_core: ^0.5.0+1
   rxdart: ^0.25.0
   provider: ^4.3.3
   shared_preferences: ^0.5.12+4
+  flutter_facebook_login: ^3.0.0
+  http: any
 
 dev_dependencies:
   flutter_test:
