--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_auth: ^0.18.0
-  firebase_core: ^0.5.0+1
+  firebase_auth: ^0.20.0
+  firebase_core: ^0.7.0
   rxdart: ^0.25.0
   provider: ^4.3.3
   shared_preferences: ^0.5.12+4
   flutter_facebook_login: ^3.0.0
   http: any
+  cloud_firestore: ^0.16.0+1
+  firebase_storage: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +58,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/splash_background.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -83,3 +85,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts:
+    - family:  SendIcon
+      fonts:
+       - asset: fonts/SendIcon.ttf
