--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   flutter_local_notifications: ^4.0.1+2
   fluttertoast: ^7.1.8
   device_info: ^1.0.0
+  flutter_link_preview: ^1.5.6
+  url_launcher: ^5.7.10
+  flutter_linkify: ^4.0.2
+  image_picker: ^0.6.7+22
+  image_cropper: ^1.3.1
+  flutter_image_compress: ^0.7.0
+  crop: any
 
 dev_dependencies:
   flutter_test:
